--- a/midterm/index.html
+++ b/midterm/index.html
@@ -56,17 +56,16 @@
       <picture class="grid-right">
         <img src="images/discover.svg" alt="discover" class="discover-img">
       </picture>
-      <picture class="scroll">
-        <source srcset="icons/arrow.svg" media="(min-width:800px)">
-        <img src="icons/arrow.svg" alt="scroll-arrow" class="scroll-arrow">
-        <figcaption>scroll</figcaption>
-      </picture>
     </div>
+    <picture class="scroll">
+      <source srcset="icons/arrow.svg" media="(min-width:800px)">
+      <img src="icons/arrow.svg" alt="scroll-arrow" class="scroll-arrow">
+    </picture>
   </div>
   <div class=" school-grid">
     <div class="school-img">
       <picture>
-        <source srcset="images/school.jpg" media="(min-width: 100px)">
+        <source srcset="images/school.jpg" media="(min-width: 1000px)">
         <source srcset="images/school_3008x650.jpg" media="(min-width: 800px)">
         <img src="images/school.jpg" alt="school" class="school">
       </picture>
@@ -95,19 +94,22 @@
         focused on programming that results in our students taking person ownership for their health."</p>
     </div>
   </div>
-  <picture>
-    <source srcset="images/entertainment_5568x1386.jpg">
-    <img src="images/entertainment.jpg" alt="entertainment" class="entertainment-img">
-  </picture>
-  <div class="wrapper">
-    <div class="entertainment">
-      <h2>Discover</h2>
-      <h3>The entertainment</h3>
-      <p>at Algonquin College is endless. We currently have the Algonquin Commons Theatre where we host a variety of
-        events. Now with the coming of the ARC facility, not only will it be providing more space for students to
-        study,
-        but it will also be bringing in more room for late-night entertainment.</p>
-      <button type="button" class="learn-more">Learn More</button>
+  <div class="entertainment-grid">
+    <picture class="entertainment-pic">
+      <source srcset="images/entertainment.jpg" media="(min-width:1000px)">
+      <source srcset="images/entertainment_5568x1386.jpg" media="(min-width:800px)">
+      <img src="images/entertainment.jpg" alt="entertainment" class="entertainment-img">
+    </picture>
+    <div class="wrapper">
+      <div class="entertainment">
+        <h2>Discover</h2>
+        <h3>The entertainment</h3>
+        <p>at Algonquin College is endless. We currently have the Algonquin Commons Theatre where we host a variety of
+          events. Now with the coming of the ARC facility, not only will it be providing more space for students to
+          study,
+          but it will also be bringing in more room for late-night entertainment.</p>
+        <button type="button" class="learn-more">Learn More</button>
+      </div>
     </div>
   </div>
   <!-- start coding footer, adding text, icons and back to top link -->
