fixed contact page for desktop

--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -25,7 +25,7 @@
   <!-- divided main body into three sections: communicate, contact-form, and location -->
   <!-- each section has its appropriate text, images, and buttons -->
   <div class="wrapper">
-    <div class="grid-1">
+    <div class="communicate-grid">
       <div class="communicate">
         <h1>We Want to Hear From You</h1>
         <p>If you have an idea for an activity that you think you and your fellow students would love to participate in
