fixed some contact page

--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -50,25 +50,29 @@
         </form>
       </div>
     </div>
-    <div class="location-sec">
-      <div class="location">
+  </div>
+  <div class="location-sec">
+    <div class="location">
+      <div class="location-text">
         <h1>Our Location.</h1>
-        <h7>Algonquin College Students' Association</h7>
-        <div class="location-text">
-          <p>Monday to Friday – 8:30am to 6:00pm</p>
-          <p>1385 Woodroffe Avenue (E114)</p>
-          <p>Ottawa, Ontario</p>
-          <p> K2G 1V8</p>
-          <p> (613) 727-4723 x7711</p>
-        </div>
+        <h2>Algonquin College Students' Association</h2>
+        <p>Monday to Friday – 8:30am to 6:00pm</p>
+        <p>1385 Woodroffe Avenue (E114)</p>
+        <p>Ottawa, Ontario</p>
+        <p> K2G 1V8</p>
+        <p> (613) 727-4723 x7711</p>
       </div>
-      <!-- embedded google maps with the college's location -->
+    </div>
+    <!-- embedded google maps with the college's location -->
+    <div class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31731.17796337886!2d-75.75202996506461!3d45.33535877929238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce04540b77e3bb%3A0x9e246d934b6c6ed!2sAlgonquin%20College%20of%20Applied%20Arts%20and%20Technology!5e0!3m2!1sen!2sca!4v1593985089348!5m2!1sen!2sca"
         width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
         tabindex="0"></iframe>
     </div>
   </div>
+
+
   <!-- start coding footer, adding text, icons and back to top link -->
   <footer>
     <div class="follow-us">
