changed index.html and read me file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Github Website</title>
+  <title>Jasmine Ebery - Portfolio</title>
 </head>
 
 <body>
-  <h1>Jasmine Ebery</h1>
+  <h1>Welcome to my Portfolio</h1>
   <h2>20S_MTM6201-020</h2>
   <h3>Git Hub Username: eber0017</h3>
   <p>One interesting thing I did over the break was completing some drawings I had started before this program started.
