--- a/index.html
+++ b/index.html
@@ -1,19 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jasmine Ebery - Portfolio</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+
+  <title>Web Portfolio - Jasmine Ebery</title>
 </head>
 
+<header class="top">
+  <!-- Image and text -->
+  <nav class="navbar">
+    <a class="navbar-brand" href="#">
+      <img src="./icons/logo-bkg.jpg" width="50" height="50" class="d-inline-block align-top img-fluid" alt="logo"></a>
+    <button class="navbar-toggler" data-target="#mobilenav" data-toggle="collapse"><span
+        class="navbar=toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mobilenav">
+      <div class="navbar-nv ml-auto">
+        <a class="nav-link active" href="#">HOME</a>
+        <a class="nav-link" href="#">ABOUT ME</a>
+        <a class="nav-link" href="#">CONTACT</a>
+      </div>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+</header>
+
 <body>
-  <h1>Welcome to my Portfolio</h1>
-  <h2>20S_MTM6201-020</h2>
-  <h3>Git Hub Username: eber0017</h3>
-  <p>One interesting thing I did over the break was completing some drawings I had started before this program started.
-  </p>
-  <p>I also read three amazing books called Six of Crows, Crooked Kingdom, and Oath Taker</p>
+  <div class="wrapper">
+
+    <div class="head">
+      <picture class="header-img">
+        <source srcset="./img/header-img-mobile.jpg" media="(min-width: 200px)">
+        <source srcset="./img/header-img-tablet.jpg" media="(min-width: 800px)">
+        <source srcset="./img/header-img-desktop.jpg" media="(min-width: 1400px)">
+        <img src="./img/header-img-desktop.jpg" alt="Header Image">
+      </picture>
+      <button type="button" class="portfolio">VIEW PORTFOLIO</button>
+    </div>
+
+    <div class="quote">
+      <img src="./icons/logo.png" alt="logo">
+      <p>"Creativity is inventing, experimenting, growing, taking risks, breaking rules, making mistakes, and having
+        fun."
+        - Mary Lou Cook</p>
+    </div>
+
+    <div class="learn-more">
+      <p>I am an enthusiastic student currently studying in the two year Interactive Media Design Diploma Program at
+        Algonquin College. I have skills in graphic design, website design/development, video foundations, and
+        photography. During my time studying at Algonquin College I have gained experience in:
+        • Designing stunning vector graphic designs using Adobe Illustrator
+        • Creating multi-page responsive websites using HTML/CSS/JavaScript
+        • Filming using a DSLR camera and editing short videos using Adobe Premiere Pro and Adobe Audition
+        • Designing responsive website prototypes in Adobe XD using UX/UI principles
+      </p>
+      <button type="button">LEARN MORE</button>
+    </div>
+
+  </div> <!-- wrapper div -->
 </body>
+
+<footer>
+  <nav>
+    <ul>
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">ABOUT ME</a></li>
+      <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
+      <li><a href="#">PORTFOLIO</a></li>
+      <li><a href="#">CONTACT</a></li>
+      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+          d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+        <path fill-rule="evenodd"
+          d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
+        <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
+      </svg>
+    </ul>
+  </nav>
+</footer>
 
 </html>
