--- a/index.html
+++ b/index.html
@@ -14,29 +14,37 @@
   <title>Web Portfolio - Jasmine Ebery</title>
 </head>
 
-<header class="top">
-  <!-- Image and text -->
-  <nav class="navbar">
-    <a class="navbar-brand" href="#">
-      <img src="./icons/logo-bkg.jpg" width="50" height="50" class="d-inline-block align-top img-fluid" alt="logo"></a>
-    <button class="navbar-toggler" data-target="#mobilenav" data-toggle="collapse"><span
-        class="navbar=toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="mobilenav">
-      <div class="navbar-nv ml-auto">
-        <a class="nav-link active" href="#">HOME</a>
-        <a class="nav-link" href="#">ABOUT ME</a>
-        <a class="nav-link" href="#">CONTACT</a>
-      </div>
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-</header>
-
 <body>
+  <header class="top">
+
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="#"><img src="./icons/logo-bkg.jpg" width="50" height="50"
+          class="d-inline-block align-top img-fluid" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">ABOUT ME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">CONTACT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+
   <div class="wrapper">
 
     <div class="head">
@@ -44,13 +52,13 @@
         <source srcset="./img/header-img-mobile.jpg" media="(min-width: 200px)">
         <source srcset="./img/header-img-tablet.jpg" media="(min-width: 800px)">
         <source srcset="./img/header-img-desktop.jpg" media="(min-width: 1400px)">
-        <img src="./img/header-img-desktop.jpg" alt="Header Image">
+        <img src="./img/header-img-desktop.jpg" alt="Header Image" class="img-fluid">
       </picture>
       <button type="button" class="portfolio">VIEW PORTFOLIO</button>
     </div>
 
     <div class="quote">
-      <img src="./icons/logo.png" alt="logo">
+      <img src="./icons/logo.png" alt="logo" class="logo">
       <p>"Creativity is inventing, experimenting, growing, taking risks, breaking rules, making mistakes, and having
         fun."
         - Mary Lou Cook</p>
@@ -69,26 +77,43 @@
     </div>
 
   </div> <!-- wrapper div -->
-</body>
 
-<footer>
-  <nav>
-    <ul>
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">ABOUT ME</a></li>
-      <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
-      <li><a href="#">PORTFOLIO</a></li>
-      <li><a href="#">CONTACT</a></li>
-      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
-        xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd"
-          d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-        <path fill-rule="evenodd"
-          d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
-        <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
-      </svg>
-    </ul>
-  </nav>
-</footer>
+
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT ME</a></li>
+        <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">CONTACT</a></li>
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+          <path fill-rule="evenodd"
+            d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
+          <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
+        </svg>
+      </ul>
+    </nav>
+    <div class="social">
+      <p>&copy; Jasmine Ebery, 2020</p>
+      <i class="fab fa-instagram"></i>
+      <i class="fab fa-facebook-square"></i>
+    </div>
+  </footer>
+  <script src="https://kit.fontawesome.com/c6f7e77de3.js" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
+</body>
 
 </html>
