added some html and css code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#"><img src="./icons/logo-bkg.jpg" width="50" height="50"
-          class="d-inline-block align-top img-fluid" alt="logo"></a>
+          class="d-inline-block align-top img-fluid pr-2" alt="logo">
+        <h6>JASMINE EBERY DESIGNS</h6>
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,9 +61,12 @@
 
     <div class="quote">
       <img src="./icons/logo.png" alt="logo" class="logo">
-      <p>"Creativity is inventing, experimenting, growing, taking risks, breaking rules, making mistakes, and having
-        fun."
-        - Mary Lou Cook</p>
+      <blockquote class="blockquote">
+        <p class="mb-0 mx-auto">"Creativity is inventing, experimenting, growing, taking risks, breaking rules, making
+          mistakes,
+          and having fun."</p>
+        <footer class="blockquote-footer mt-2 ml-5 pl-5">Mary Lou Cook</footer>
+      </blockquote>
     </div>
 
     <div class="learn-more">
